Added project section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@ Geeta Turumella
   <meta name="author" content="Geeta Turumella">
   <title>Geeta's Portfolio</title>  
   <link rel="stylesheet" href="css/index.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://gitlist.himdek.com/GitHubList.js"></script>
   </head>
   <body>
   <nav class="navbar">
@@ -59,7 +61,7 @@ Geeta Turumella
           </ul>
         </div>
  </section>
-   <!--FORM-->
+   <!--SKILLS-->
       <section id= "skillSec">
      <div>
     <h1 class ="h1-section"> Skills</h1>
@@ -68,6 +70,16 @@ Geeta Turumella
        </ol>
      </div>
   </section>
+<!--PROJECT-->
+  <section id = "projects">
+   <h2 class="h2-project">Projects</h2>
+   <div id="ElementId"></div>
+   <ol>
+      <!--Used ordered list instead of <ul>-->
+   </ol>
+</section>
+
+<!--FORM-->
   <section class="message-section">
     <div>
     <h2 class="h2-message">Leave a Message</h2>
@@ -95,8 +107,8 @@ Geeta Turumella
  <section>
  <h1 class="h1-section">Connect</hi>
   <h3> Email: gtturumella@gmail.com &nbsp; GitHub
-  <a href="https://github.com/Tugeeta"><img src="github.jpg" width="15"> &nbsp; &nbsp; Linkedin</a>
-  <a href="https://www.linkedin.com/in/geeta-devi-404679238/"><img src="linkedin.jpg" width="15"></a>
+  <a href="https://github.com/Tugeeta"><img src="github.jpg" width="25"> &nbsp; &nbsp; Linkedin</a>
+  <a href="https://www.linkedin.com/in/geeta-devi-404679238/"><img src="linkedin.jpg" width="25"></a>
  </h3>
  <footer class="footer-copyright">
   <p id="copyright"></p>
